# facegate

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  config.example.toml  install-dev.sh  pam-face-rs-README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  releases.yml
crates/face_rs_cli/: Cargo.toml
crates/face_rs_cli/src/: main.rs
crates/face_rs_cli/src/commands/: add.rs  auth.rs  camera_test.rs  configure.rs  doctor.rs  list.rs  mod.rs  remove.rs  test.rs
crates/face_rs_cli/src/tui/: app.rs  main_menu.rs  mod.rs  ui.rs
crates/face_rs_core/: Cargo.toml
crates/face_rs_core/src/: camera.rs  config.rs  detection.rs  embedding.rs  error.rs
crates/facegate_brokerd/: Cargo.toml
crates/facegate_brokerd/src/: main.rs
crates/facegate_cli/: Cargo.toml
crates/facegate_cli/src/: main.rs
crates/facegate_cli/src/commands/: add.rs  auth.rs  broker.rs  broker_admin.rs  calibrate.rs  calibrate_cameras.rs  camera_test.rs  cameras.rs  configure.rs  doctor.rs  emergency_disable.rs  forget.rs  list.rs  mod.rs  pam_edit.rs  remove.rs  services.rs  session_toggle.rs  setup.rs  status.rs  sudo_toggle.rs  test.rs  user_log.rs  users.rs  watch.rs  watch_toggle.rs
crates/facegate_cli/src/tui/: app.rs  main_menu.rs  mod.rs  ui.rs
crates/facegate_core/: Cargo.toml
crates/facegate_core/src/: camera.rs  config.rs  detection.rs  embedding.rs  error.rs  lib.rs  matching.rs  pipeline.rs  storage.rs
crates/facegate_ipc/: Cargo.toml
crates/facegate_ipc/src/: lib.rs
crates/pam_face_rs/: Cargo.toml
crates/pam_face_rs/src/: lib.rs
crates/pam_facegate/: Cargo.toml
crates/pam_facegate/src/: lib.rs  pam_sys.rs
docs/: facegate.1  ipc-protocol.md  recovery.md  threat-model.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  contributing.md  faq.md  introduction.md  troubleshooting.md
docs/book/src/architecture/: broker.md  ipc.md  overview.md  recognition-pipeline.md  screen-unlock.md
docs/book/src/getting-started/: enrolment.md  installation.md  pam.md  setup.md
docs/book/src/reference/: cameras.md  cli.md  configuration.md
docs/book/src/security/: recovery.md  roadmap.md  threat-model.md
docs/security-issues/: 00-biometric-template-leak-roadmap.md  01-template-broker-service.md  02-template-storage-permissions-and-migration.md  03-replace-direct-template-access-with-broker-ipc.md  04-broker-runtime-hardening.md  05-correct-security-docs-for-template-risk.md  06-liveness-pad.md  07-tpm-sealing.md  08-stricter-recognition-defaults.md  09-dual-camera-cross-check.md
packaging/aur/: README.md
packaging/aur/facegate-bin/: .SRCINFO  PKGBUILD
packaging/aur/facegate-git/: .SRCINFO  PKGBUILD  facegate.install
packaging/copr/: README.md  facegate.spec
packaging/nfpm/: facegate.yaml
packaging/nfpm/scripts/: postinstall.sh
scripts/: package-nfpm.sh
systemd/: facegate-brokerd.service  facegate-watch.service
