[workspace]
resolver = "2"
members = [
    "crates/face_rs_core",
    "crates/face_rs_cli",
    "crates/pam_face_rs",
]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
libc = "0.2"
ratatui = "0.29"
crossterm = "0.28"
v4l = "0.14"
image = "0.25"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic", "ndarray"] }
ndarray = "0.17"
