[workspace]
resolver = "2"
members = [
    "crates/facegate_brokerd",
    "crates/facegate_core",
    "crates/facegate_ipc",
    "crates/facegate_cli",
    "crates/pam_facegate",
]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
libc = "0.2"
ratatui = "0.29"
crossterm = "0.28"
v4l = "0.14"
image = "0.25"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic", "ndarray"] }
ndarray = "0.17"
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "net", "io-util"] }
futures-util = "0.3"
zeroize = "1"
