[package]
name = "face_rs_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "face-rs"
path = "src/main.rs"

[dependencies]
face_rs_core = { path = "../face_rs_core" }
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
libc = { workspace = true }
toml = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
