[package]
name = "face_rs_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }
v4l = { workspace = true }
image = { workspace = true }
ort = { workspace = true }
ndarray = { workspace = true }

[dev-dependencies]
tempfile = "3"
