[package]
name = "facegate_brokerd"
version = "0.3.1"
edition = "2021"
license = "GPL-3.0-or-later"

[[bin]]
name = "facegate-brokerd"
path = "src/main.rs"

[dependencies]
facegate_core = { path = "../facegate_core" }
facegate_ipc = { path = "../facegate_ipc" }
anyhow = { workspace = true }
libc = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tempfile = "3"
