[package]
name = "facegate_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "facegate"
path = "src/main.rs"

[dependencies]
facegate_core = { path = "../facegate_core" }
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
libc = { workspace = true }
toml = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zbus = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
v4l = { workspace = true }
