[package]
name = "facegate_cli"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0-or-later"

[[bin]]
name = "facegate"
path = "src/main.rs"

[dependencies]
facegate_core = { path = "../facegate_core" }
facegate_ipc = { path = "../facegate_ipc" }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
libc = { workspace = true }
toml = { workspace = true }
serde_json = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zbus = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
v4l = { workspace = true }
