[package]
name = "facegate_core"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }
v4l = { workspace = true }
image = { workspace = true }
ort = { workspace = true }
ndarray = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tempfile = "3"
