[package]
name = "pam_facegate"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "pam_facegate"
crate-type = ["cdylib"]

[dependencies]
# Intentionally minimal: no facegate_core, no ML, no async runtime. The PAM
# module is loaded into security-critical processes (sudo, login managers),
# so we keep its dependency graph as small and auditable as possible.
libc = { workspace = true }
